--- a/style.css
+++ b/style.css
@@ -1,30 +1,31 @@
 /* Drapeau français */
-.flag {
+.flag-fr {
     position: absolute;
     top: 10px;
-    left: 10px;
+    left: 10px; /* Position du drapeau français à gauche */
     width: 60px;
     height: 40px;
     overflow: hidden;
     border-radius: 5px;
 }
 
-.flag img {
+.flag-fr img {
     width: 100%; /* Adapte l'image à la taille du container */
     height: auto; /* Maintient les proportions de l'image */
 }
+
 /* Drapeau canadien */
-.flag {
+.flag-ca {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 10px; /* Position du drapeau canadien à droite */
     width: 60px;
     height: 40px;
     overflow: hidden;
     border-radius: 5px;
 }
 
-.flag img {
+.flag-ca img {
     width: 100%; /* Adapte l'image à la taille du container */
     height: auto; /* Maintient les proportions de l'image */
 }
