--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h2 {
     border-radius: 8px;
     max-width: 75%; /* Garde de l'espace et évite les débordements */
     word-wrap: break-word;
-    white-space: pre-wrap;
+    white-space: normal;
     line-height: 1.5;
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
