--- a/style.css
+++ b/style.css
@@ -77,6 +77,8 @@ h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     overflow-wrap: break-word;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Barre de saisie */
@@ -131,6 +133,17 @@ h2 {
 
 /* Message de l'utilisateur */
 .user {
+    background: #e0e0e0;
+    color: black;
+    text-align: left;
+    float: left;
+    clear: both;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    align-self: flex-start; /* Modifié pour aligner les messages utilisateur à gauche */
+}
+
+/* Message du chatbot */
+.bot {
     background: #007bff;
     color: white;
     text-align: right;
@@ -138,17 +151,6 @@ h2 {
     clear: both;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     align-self: flex-end;
-}
-
-/* Message du chatbot */
-.bot {
-    background: #f1f1f1;
-    color: black;
-    text-align: left;
-    float: left;
-    clear: both;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    align-self: flex-start;
 }
 
 /* Retirer le gras pour tous les messages */
